// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KinoGer handle imdb blood and sinners 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/18809-blood-sinners-stream.html",
      "title": "Blood & Sinners (2025)",
    },
    "url": "https://kinoger.ru/v/BkUY21dAvzyq/",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/18809-blood-sinners-stream.html",
      "title": "Blood & Sinners (2025)",
    },
    "url": "https://fsst.online/embed/900576/",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/18809-blood-sinners-stream.html",
      "title": "Blood & Sinners (2025)",
    },
    "url": "https://kinoger.pw/e/6zeREaMlrqREZPa",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/18809-blood-sinners-stream.html",
      "title": "Blood & Sinners (2025)",
    },
    "url": "https://kinoger.re/#ge5fhb",
  },
]
`;

exports[`KinoGer handle imdb dead city s2e5 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/12971-the-walking-dead-dead-city-stream.html",
      "title": "The Walking Dead: Dead City 2x5",
    },
    "url": "https://kinoger.ru/v/j1Odr1xqKEWS/",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/12971-the-walking-dead-dead-city-stream.html",
      "title": "The Walking Dead: Dead City 2x5",
    },
    "url": "https://supervideo.cc/e/bj6szat1pval",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/12971-the-walking-dead-dead-city-stream.html",
      "title": "The Walking Dead: Dead City 2x5",
    },
    "url": "https://kinoger.re/#x6tsx9",
  },
]
`;

exports[`KinoGer handle imdb dead city s2e6 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/12971-the-walking-dead-dead-city-stream.html",
      "title": "The Walking Dead: Dead City 2x6",
    },
    "url": "https://kinoger.ru/v/15U2exVIfyEq/",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/12971-the-walking-dead-dead-city-stream.html",
      "title": "The Walking Dead: Dead City 2x6",
    },
    "url": "https://fsst.online/embed/901994/",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://kinoger.com/stream/12971-the-walking-dead-dead-city-stream.html",
      "title": "The Walking Dead: Dead City 2x6",
    },
    "url": "https://kinoger.re/#ep1tcf",
  },
]
`;

exports[`KinoGer handle missing episode imdb black mirror s3e4 1`] = `[]`;
